--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "homepage": "https://github.com/raza0268/React-Skeleton#readme",
   "dependencies": {
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
-    "http-server": "^0.11.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "watchify": "^3.11.1"
+    "react": "^0.14.3",
+    "react-dom": "^0.14.3",
+    "watchify": "^3.6.1",
+    "http-server": "^0.11.1"
   }
 }
